# win32-window

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  toolchain-mingw64.cmake
include/: custom_window.h
src/: custom_window.cpp  main.cxx  window.cpp
